Fix EM not showing color

--- a/trollianNew.theme.css
+++ b/trollianNew.theme.css
@@ -443,6 +443,7 @@ div[aria-label="Servers"] .listItem__48528:nth-of-type(even) .pill__6b31b {
 .messageContent_abea64 > b,
 .messageContent_abea64 > u,
 .messageContent_abea64 > i,
+.messageContent_abea64 > em,
 .messageContent_abea64 h1, 
 .messageContent_abea64 ol, 
 .messageContent_abea64 ul {
